--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "projeto-livraria",
     "version": "1.0.0",
+    "type": "module",
     "scripts": {
         "start": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
     },
